action pack, end of year.

--- a/ANOC_WM/ANOC_WM_Launch.html
+++ b/ANOC_WM/ANOC_WM_Launch.html
@@ -327,7 +327,7 @@
                                                                                                             </li>
                                                                                                             <li><span
                                                                                                                 style="color: #33434e; font-size: 18px;">
-                                                                                                                A detailed overview of features and services for next year. </span>
+                                                                                                                A detailed overview of features and services for next year.</span>
                                                                                                         </li>
                                                                                                         </ul>
                                                                                                           
@@ -365,7 +365,9 @@
                                                                                                                     class="inner-td"
                                                                                                                     style="font-family: inherit; text-align: inherit;border-radius:6px; font-size:18px; text-align:center; background-color:inherit;">
                                                                                                                     <a href="[[MemberPlanWebSite]]"
-                                                                                                                        style="text-align: inherit; border-radius:6px; border-width:0; color:#ffffff; display:inline-block; font-size:18px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:10px 32px 10px 32px; text-align:center; text-decoration:none; border-style:solid; background-color:#0672ee;"
+                                                                                                                        style="text-align: inherit; border-radius:6px; border-width:0; color:#ffffff; display:inline-block; font-size:18px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:10px 32px 10px 32px; text-align:center; text-decoration:none; border-style:solid; 
+                                                                                                                        border-color: #0672ee;
+                                                                                                                        background-color:#0672ee;"
                                                                                                                         target="_blank">Join Now</a>
                                                                                                                 </td>
                                                                                                             </tr>
