--- a/Behavior Health/Behavior Health - Recommended.html
+++ b/Behavior Health/Behavior Health - Recommended.html
@@ -394,7 +394,7 @@
                                                                                                         <p
                                                                                                         style="padding-bottom: 0; font-size:18px; line-height: 27px;">
                                                                                                         <span
-                                                                                                            style="color: #33434e; font-size: 18px; line-height:27px;">Take the first step towards your well-being today!</span></p>
+                                                                                                            style="color: #33434e; font-size: 18px; line-height:27px;">Take the first step toward your well-being today!</span></p>
 
                                                                                                       
                                                                                                     </div>
