--- a/Behavior Health/Behavior Health - Remind.html
+++ b/Behavior Health/Behavior Health - Remind.html
@@ -315,7 +315,7 @@
                                                                                                     <div
                                                                                                         style="font-family: inherit; text-align: inherit">
                                                                                                         <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">Over the last few months you’ve learned helpful tips, tools, and tricks to strengthen your mental health as part of <em>[[ActionCardName]]</em>.    
+                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">Over the last few months you've learned helpful tips, tools, and tricks to strengthen your mental health as part of <em>[[ActionCardName]]</em>.    
                                                                                                             </span></p>
 
                                                                                                             <p style="font-size: 18px; line-height: 27px;"><span
