--- a/Comm Preference Update/launch.html
+++ b/Comm Preference Update/launch.html
@@ -386,7 +386,7 @@
                                                                                                         <p
                                                                                                             style="padding-bottom: 0; font-size:18px; line-height: 27px;">
                                                                                                             <span
-                                                                                                                style="color: #33434e; font-size: 18px; line-height:27px;">We don’t want you to miss out on helpful tips and tools to improve your well-being. Therefore, we want to make sure we know how best to reach you about new and expiring programs. Update your profile today!
+                                                                                                                style="color: #33434e; font-size: 18px; line-height:27px;">We don't want you to miss out on helpful tips and tools to improve your well-being. Therefore, we want to make sure we know how best to reach you about new and expiring programs. Update your profile today!
                                                                                                             </span>
                                                                                                         </p>
 
@@ -443,60 +443,6 @@
                                                                              </table>
                                                                          </div>
                                                                          <!-- /FOOTER LINE -->
-
-
-                                                                            <!-- BOILERPLATE -->
-                                                                            <div
-                                                                                style="border-top:0px solid transparent; border-left:0px solid transparent; border-bottom:0px solid transparent; border-right:0px solid transparent; padding-top:0; padding-bottom:0px;">
-                                                                                <table width="100%" cellpadding="0"
-                                                                                    cellspacing="0" border="0"
-                                                                                    style="width:100%; max-width:600px;"
-                                                                                    align="center">
-                                                                                    <tbody>
-                                                                                        <tr>
-                                                                                            <td role="modules-container"
-                                                                                                style="padding:12px 0px 12px 0px; color:#607382; text-align: justify; text-justify: inter-word;"
-                                                                                                bgcolor="#ffffff"
-                                                                                                width="100%"
-                                                                                                align="justify">
-                                                                                                <div
-                                                                                                    style="border-top:0px solid transparent; border-left:0px solid transparent; border-bottom:0px solid transparent; border-right:0px solid transparent; padding-top:0; padding-bottom:0px;">
-                                                                                                    <div
-                                                                                                        style="background-color:transparent;">
-                                                                                                        <div class="block-grid"
-                                                                                                            style="margin: 0 auto; min-width: 320px; max-width: 640px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: transparent;">
-                                                                                                            <div
-                                                                                                                style="border-collapse: collapse;display: table;width: 100%; background-color:transparent;">
-                                                                                                                <div class="col num12"
-                                                                                                                    style="min-width: 320px; max-width: 640px; display: table-cell; vertical-align: top; width: 640px;">
-                                                                                                                    <div
-                                                                                                                        style="width:100% !important;">
-                                                                                                                        <div class="center autowidth"
-                                                                                                                            align="center"
-                                                                                                                            style="padding-right: 0px;padding-bottom: 0px; padding-left: 0px;">
-                                                                                                                            <p
-                                                                                                                                style="font-size: 12px; line-height: 1.25; mso-line-height-alt: 15px; margin: 0 0 5px 0;">
-                                                                                                                                <span
-                                                                                                                                    style="color: #607382; font-size: 12px;">[[CampaignProperty8]]</span>
-                                                                                                                            </p>
-                                                                                                                            <p
-                                                                                                                                style="font-size: 12px; line-height: 1.25; mso-line-height-alt: 15px; margin: 0 0 5px 0;">
-                                                                                                                                <span
-                                                                                                                                    style="color: #607382; font-size: 12px;">[[CampaignProperty9]]</span>
-                                                                                                                            </p>
-                                                                                                                        </div>
-                                                                                                                    </div>
-                                                                                                                </div>
-                                                                                                            </div>
-                                                                                                        </div>
-                                                                                                    </div>
-                                                                                                </div>
-                                                                                            </td>
-                                                                                        </tr>
-                                                                                    </tbody>
-                                                                                </table>
-                                                                            </div>
-                                                                            <!-- /BOILERPLATE -->
 
                                                                             <!-- POWERED BY -->
                                                                             <div
