--- a/Step Challenges/RAW/RAW-chapter-ending.html
+++ b/Step Challenges/RAW/RAW-chapter-ending.html
@@ -245,7 +245,7 @@
                                                                                             <td style="padding:24px 0px 24px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" 
                                                                                                 role="module-content">
                                                                                                     <div style="font-family: inherit; text-align: inherit">
-                                                                                                        <p><span style="color: #33434e; font-size: 18px;">[[NameFirst]], the warm up week is coming to an end and your [[ActionCardName]] challenge will be starting in three days!</span></p>
+                                                                                                        <p><span style="color: #33434e; font-size: 18px;">[[NameFirst]], the warm up week is coming to an end and your <em>[[ActionCardName]]</em>challenge will be starting in three days!</span></p>
 
                                                                                                         <p><span style="color: #33434e; font-size: 18px;">Remember to connect your device, get some steps in, and get ready to race around the world!</span></p>
 
