--- a/Step Challenges/RAW/RAW-program-ending.html
+++ b/Step Challenges/RAW/RAW-program-ending.html
@@ -270,7 +270,7 @@
                                                                                             <td style="padding:24px 0px 0px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" 
                                                                                                 role="module-content">
                                                                                                     <div style="font-family: inherit; text-align: inherit">
-                                                                                                        <p><span style="color: #33434e; font-size: 18px;">[[NameFirst]], your [[ActionCardName]] challenge is ending in seven days.</span></p>
+                                                                                                        <p><span style="color: #33434e; font-size: 18px;">[[NameFirst]], your <em>[[ActionCardName]]</em> challenge is ending in seven days.</span></p>
 
                                                                                                         <p><span style="color: #33434e; font-size: 18px;">  Over the last several weeks, you've had the opportunity to learn about new cities and their cultures! You have one last task to complete.</span></p>
 
