--- a/Your Focus Q3/old - July 1/YFQ3-Eat.html
+++ b/Your Focus Q3/old - July 1/YFQ3-Eat.html
@@ -248,7 +248,7 @@
 
  
 
-                                                                                                            Visit [[ActionCardName]] for a summary of what you’ve learned and a final takeaway from your nutrition coach.</span></p>
+                                                                                                            Visit <em>[[ActionCardName]]</em> for a summary of what you've learned and a final takeaway from your nutrition coach.</span></p>
                                                                                                      
                                                                                                     </div>
                                                                                             </td>
