--- a/Your Focus Q3/old - July 1/YFQ3-Exercise.html
+++ b/Your Focus Q3/old - July 1/YFQ3-Exercise.html
@@ -247,7 +247,7 @@
 
  
 
-                                                                                                            Visit [[ActionCardName]]  for a summary of what you've learned and a final takeaway from your fitness coach.  
+                                                                                                            Visit <em>[[ActionCardName]]</em>  for a summary of what you've learned and a final takeaway from your fitness coach.  
                                                                                                             </span></p>
 
                                                                                                      
