--- a/telemedicine/Telemedicine - Launch.html
+++ b/telemedicine/Telemedicine - Launch.html
@@ -314,7 +314,7 @@
                                                                                                             style="color: #33434e; font-size: 18px; line-height: 28px;">Sometimes scheduling an appointment to see your doctor in person isn't convenient. That's where telemedicine comes in.
                                                                                                         </span></p>
                                                                                                         <p><span
-                                                                                                            style="color: #33434e; font-size: 18px; line-height: 28px;">Join [[ActionCardName]] today to learn whether remote doctor visits are a good option for you.  
+                                                                                                            style="color: #33434e; font-size: 18px; line-height: 28px;">Join <em>[[ActionCardName]]</em>today to learn whether remote doctor visits are a good option for you.  
                                                                                                         </span></p>
 
 </div>
