--- a/New Hire/New-Hire - drip 1.html
+++ b/New Hire/New-Hire - drip 1.html
@@ -317,50 +317,18 @@
                                                                                                             style="color: #33434e; font-size: 18px; line-height: 28px;">By joining today, you will be taking the right steps to strengthen your well-being. In addition, we at [[SponsorName]] have ensured that important resources are easily available to you:     
                                                                                                         </span></p>
 
-                                                                                                                 <!-- LIST ITEMS TYPES --> 
-     <ul>
-        <table cellpadding="0" cellspacing="0">
-            <tr>
-                <td>
-                    <li>
-                        <span style="color: #33434e; font-size: 18px;">Well-being programs aligned with your needs. </span>
-                    </li>
-                </td>
-            </tr>
-            <tr style="display:[[CampaignProperty106]];">
-                <td>
-                    <li>
-                        <span style="color: #33434e; font-size: 18px;">[[CampaignProperty101]]</span>
-                    </li>
-                </td>
-            </tr>
-        
-            <tr style="display:[[CampaignProperty108]];"> 
-                <td>
-                    <li>
-                        <span style="color: #33434e; font-size: 18px;">[[CampaignProperty103]]</span>
-                    </li>
-                </td>
-            </tr>
-            <tr style="display:[[CampaignProperty109]];">
-                <td>
-                    <li>
-                        <span style="color: #33434e; font-size: 18px;">[[CampaignProperty104]]</span>
-                    </li>
-                </td>
-            </tr>
-            <tr style="display:[[CampaignProperty110]];">
-                <td>
-                    <li>
-                        <span style="color: #33434e; font-size: 18px;">[[CampaignProperty105]]</span>
-                    </li>
-                </td>
-            </tr>
-        </table>
+                                                                                                        <table>
+                                                                                                            <tbody>
+                                                                                                            <tr><td><ul style="font-size: 18px;  margin-top: 0px; margin-bottom: 0px;"><li>Well-being programs aligned with your needs.</li></ul></td></tr>
+<tr style="display: [[CampaignProperty106]];"><td><ul style="font-size: 18px; margin-top: 0px; margin-bottom: 0px;"><li>[[CampaignProperty101]]</li></ul></td></tr>
+<tr style="display: [[CampaignProperty108]];"><td><ul style="font-size: 18px; margin-top: 0px; margin-bottom: 0px;"><li>[[CampaignProperty103]]</li></ul></td></tr>
+<tr style="display: [[CampaignProperty109]];"><td><ul style="font-size: 18px; margin-top: 0px; margin-bottom: 0px;"><li>[[CampaignProperty104]]</li></ul></td></tr>
+<tr style="display: [[CampaignProperty110]];"><td><ul style="font-size: 18px; margin-top: 0px; margin-bottom: 0px;"><li>[[CampaignProperty105]]</li></ul></td></tr>
+</tbody>
+</table>
 
-    </ul>
 
-    <!-- LIST ITEM TYPES --> 
+
     <p><span
         style="color: #33434e; font-size: 18px; line-height: 28px;">Register today to start focusing on you, your health, and your well-being! 
     </span></p>                                                                                                
@@ -516,7 +484,7 @@
                                                                                     cellspacing="0" border="0"
                                                                                     style="width:100%; max-width:600px;"
                                                                                     align="center">
-                                                                                    <tr>
+                         <tbody>                                                           <tr>
                                                                                         <td role="modules-container"
                                                                                             style="padding:12px 0px 12px 0px; color:#607382; text-align: justify; text-justify: inter-word;"
                                                                                             bgcolor="#ffffff"
