--- a/Your Focus Q3/YFQ3-Eat.html
+++ b/Your Focus Q3/YFQ3-Eat.html
@@ -315,12 +315,12 @@
                                                                                                     <div
                                                                                                         style="font-family: inherit; text-align: inherit">
                                                                                                         <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], do you feel the impact of eating healthier? Time to make your new habits stick! 
+                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], do you feel the impact of eating healthier? It's time to make your new habits stick! 
                                                                                                             </span></p>
 
                                                                                                             <p style="font-size: 18px; line-height: 27px;"><span
                                                                                                                 style="color: #33434e; font-size: 18px; line-height: 27px;">
-                                                                                                                Visit [[ActionCardName]] for a summary of what you’ve learned and a final takeaway from your nutrition coach.</span></p>
+                                                                                                                Visit <em>[[ActionCardName]]</em> for a summary of what you've learned and a final takeaway from your nutrition coach.</span></p>
                                                                                                     </div>
                                                                                                 </td>
                                                                                             </tr>
