--- a/Your Focus Q3/old - July 1/YFQ3-Finance.html
+++ b/Your Focus Q3/old - July 1/YFQ3-Finance.html
@@ -244,7 +244,7 @@
                                                                                                 role="module-content">
                                                                                                     <div style="font-family: inherit; text-align: inherit">
                                                                                                         <p><span style="color: #000000; font-size: 18px">[[NameFirst]], do you feel the impact of focusing on your finances? Time to make your new habits stick!  <br /><br />
-                                                                                                            Visit [[ActionCardName]] for a summary of what you’ve learned and a final takeaway from your financial coach. 
+                                                                                                            Visit <em>[[ActionCardName]]</em> for a summary of what you've learned and a final takeaway from your financial coach. 
                                                                                                             </span></p>
 
                                                                                                      
