--- a/Your Focus Q3/old - July 1/YFQ3-Sleep.html
+++ b/Your Focus Q3/old - July 1/YFQ3-Sleep.html
@@ -245,7 +245,7 @@
                                                                                                     <div style="font-family: inherit; text-align: inherit">
                                                                                                         <p><span style="color: #000000; font-size: 18px">[[NameFirst]], do you feel the impact of improving your sleep? Time to make your new habits stick! <br /><br />
 
-                                                                                                            Visit [[ActionCardName]] for a summary of what you’ve learned and a final takeaway from your sleep coach. 
+                                                                                                            Visit <em>[[ActionCardName]]</em> for a summary of what you've learned and a final takeaway from your sleep coach. 
                                                                                                             </span></p>
 
                                                                                                      
