Behavioral Health and End Of Year

--- a/EOY/eoy-calendar-2-first-drip.html
+++ b/EOY/eoy-calendar-2-first-drip.html
@@ -315,7 +315,7 @@
                                                                                                     <div
                                                                                                         style="font-family: inherit; text-align: inherit">
                                                                                                         <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], we want to remind you that you only have a few weeks left to earn your rewards. Log in today to make sure you’ve completed your programs in [[CampaignProperty100]].</span></p>
+                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], we want to remind you that you only have a few weeks left to earn your rewards. Log in today to make sure you've completed your programs in [[CampaignProperty100]].</span></p>
 
                                                           </div>
                                                                                                 </td>
