--- a/EOY/eoy-calendar-3-second-drip.html
+++ b/EOY/eoy-calendar-3-second-drip.html
@@ -372,7 +372,7 @@
                                                                                                         <p
                                                                                                         style="padding-bottom: 0; font-size:18px; line-height: 27px;">
                                                                                                         <span
-                                                                                                            style="color: #33434e; font-size: 18px; line-height:27px;">[[SponsorName]] wants to make sure you have the opportunity to focus on your health. We hope you’ve enjoyed the programs available on [[CampaignProperty83]].</span></p>
+                                                                                                            style="color: #33434e; font-size: 18px; line-height:27px;">[[SponsorName]] wants to make sure you have the opportunity to focus on your health. We hope you've enjoyed the programs available on [[CampaignProperty83]].</span></p>
 
                                                                                                     </div>
                                                                                                 </td>
