--- a/Medicare Retention/emails - v2/ANOC_Medicare_Dis_Email_v2.html
+++ b/Medicare Retention/emails - v2/ANOC_Medicare_Dis_Email_v2.html
@@ -263,7 +263,7 @@
                                                                                                              <ul>
                                                                                                              <li><span style="color: #000000; font-size: 18px">If you are satisfied, you don't need to do anything. Your coverage will auto-renew.</span></li>
                                                                                                             
-                                                                                                             <li><span style="color: #000000; font-size: 18px">If you have questions, click ‘Questions?' below or call [[CampaignProperty110]].</span></li>
+                                                                                                             <li><span style="color: #000000; font-size: 18px">If you have questions, click Questions?' below or call [[CampaignProperty110]].</span></li>
                                                                                                              </ul>
                                                                                                     </div>
                                                                                             </td>
